Bug 148835 - save to Excel breaks XLSX from 7.4
Summary: save to Excel breaks XLSX from 7.4
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, filter:xlsx, regression
: 149034 (view as bug list)
Depends on:
Blocks: XLSX-Corrupted Sparklines
  Show dependency treegraph
 
Reported: 2022-04-28 11:31 UTC by Elmar
Modified: 2022-09-09 10:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
source file (66.44 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-04-28 11:36 UTC, Elmar
Details
file saved using 31march build (63.72 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2022-04-28 11:37 UTC, Elmar
Details
file saved with 28apr build (64.27 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2022-04-28 11:37 UTC, Elmar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elmar 2022-04-28 11:31:20 UTC
Description:
Save a file as xlsx, when opining in MS Excel, complains that it is broken. can fix wit loss of data

Steps to Reproduce:
1. create workbook in Calc
2. save as ods
3. save as xlsx
open in Excel

Actual Results:
opens with errors, offers to fix but loss of data

Expected Results:
shoul d not occur


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-GB
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: aca4b5708207962935ca34adc70fed3a9ffb6074
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded

also downloaded 28Apr build
same problem

restored 31March build
works fine

seems to be regression
Comment 1 Elmar 2022-04-28 11:36:30 UTC
Created attachment 179820 [details]
source file

created with 26apr build
Comment 2 Elmar 2022-04-28 11:37:17 UTC
Created attachment 179821 [details]
file saved using 31march build

has no porblem
Comment 3 Elmar 2022-04-28 11:37:57 UTC
Created attachment 179822 [details]
file saved with 28apr build
Comment 4 Timur 2022-05-10 13:34:34 UTC
7.4 commit 39443c5c2087a92b80baad5bf9a8c37152d7ea63
    source a2bcac670ef0254d8b2e8632cfe07bb855b28d1c
author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	
sc: improve SparklineList to track added SparklineGroups

CC Tomaž please see.
Comment 5 Gabor Kelemen (Collabora) 2022-05-11 11:19:55 UTC
*** Bug 149034 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2022-05-12 09:10:47 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2c4330b3570f16d6668936fd05e1ab2ade597bae

tdf#148835 don't write any sparkline xml elements if none exists

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gabor Kelemen (Collabora) 2022-05-18 09:25:16 UTC
Checked in:
Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: b2467d6c7af988f8ed4e090ebf9472be6c84fb06
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: default; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded

A file not containing sparklines now open fine in Excel 2010/13. 
Thanks for fixing this!