tdf#148835 don't write any sparkline xml elements if none exists

Change-Id: Idd4058a88639cebceded13110dc367e74b6f7097
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134141
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit 2c4330b3570f16d6668936fd05e1ab2ade597bae)